Lesson 3/Scheem.peg
start =
    whitespace* result:expression whitespace*
    { return result; }

expression =
    (atom
  / quote
  / list)

atom =
    characters:[0-9a-zA-Z_?!+-=@#$%^&*/.]+
    { return characters.join(""); }

quote =
    "'" value:expression
    { return ["quote"].concat([value]) }

list =
    "(" whitespace* first:expression elements:(whitespace+ expression)* whitespace* ")"
    {
        result = [first];
        for (var i = 0; i < elements.length; i++)
            result.push(elements[i][1]);
        return result;
    }

whitespace =
    [ \t\r\n] (";;" [^\r\n]*)?
